css/main.css
:root {
  --color-primary: #ea4d2a;
  --color-grey-dark-1: #333;
  --default-font-color:#444;
  --odd-section-color: #fff;
  --even-section-color:#EDEDED;


}


  /* 
  menu-logo
  menu
  header-hero
  header-hero-price
  product-header
  product-desc
  product-button
  footer-header
  footer-desc
  footer-price
  footer-link-header
  footer-link-link 
  */


* {
  margin: 0;
  padding: 0;
}

*,
*::before,
*::after {
  box-sizing: inherit;
}

html {
  box-sizing: border-box;
  font-size: 62.5%;

     /* @media screen and (min-width: 500px) {
     font-size: 20%;
   }  */
}

body {
  font-family: 'Oswald', sans-serif;
  font-weight: 400;
  line-height: 1.6;
  font-size: 1.4rem;
  color: var(--color-grey-dark-1);
  font-style: normal;
  overflow-x: hidden; 
}

.section {
  padding: 5rem 0;
}
/* 
.section-center {
  width: 90vw;
  margin: 0 auto;
  max-width: 1170px;
} */

/* NAVBAR */

.menu-item{
  text-decoration: none;
  color: var(--default-font-color);
  text-transform: uppercase;
  letter-spacing: 0.5px;
  line-height: 24px;
}


/* .nav-scrolled{
  background-color: white;
  border-bottom: 1px rgb(211, 211, 211) solid;
} */



.nav-header {
  /* align-items: center; */
  /* grid-column: 2/3; */
  /* grid-row: 1/1; */
 
}

.nav-links {
  /* grid-column: 3/4; */
  /* grid-row: 1/1; */
  list-style-type: none;
  z-index: 10;
}

  .nav-links li {
    margin-right: 2rem;
  }


/* HERO */


.hero-info-intro{
  font-size: 5.6rem;
  font-weight: 200;
  line-height: 6.72rem;
  text-transform: uppercase;
  color: rgb(33,37,41);
}



.stronger{
  font-weight: 600;
}


figure img {
  width: 100%;
}

/* .text-padding {
  padding: 3rem 1.5rem;
  margin-bottom: 2rem;
} */


.btn{
  cursor: pointer;
  display: inline-block;
  font-weight: 400;
  text-align: center;
  vertical-align: middle;
  border: 1px solid transparent;
  line-height: 1.5;
  transition: all 0.2s;
  text-decoration: none;
}

.btn-primary{
  background-color: var(--color-primary);
  border-color: #ea4d2a #ea4d2a #cd3614;
  color: #FFF;
  text-transform: uppercase;
  font-size: 1.56rem;
  font-family: 'Open Sans', Arial, sans-serif;
}

.btn-rounded {
  border-radius: 35px;
}


/* hero layout mobile-first */

.navbar {
  display: grid;
  grid-template-columns: 1fr minmax(auto, 53rem) 1fr;
  align-self: start;
  margin: 0 2rem;
  position: sticky;
  top: 0;
  left: 0;
  z-index: 10;
  background: white;
}

.nav-center {
  grid-column: 2 / 3 ;
  height: 15rem; 
  padding-top: 2rem;
  list-style: none;
  transition-timing-function: cubic-bezier(0.65, 0.05, 0.36, 1);
  transition: height 0.2s;
}

/* .nav-resized{
  height: 10rem !important;
} */


.header {
  background-color: var(--odd-section-color);
  margin: 0 2rem;
}


.hero-center {
  display: grid;
  height: calc(100vh - 15rem);
  grid-template-rows: 1fr min-content 3fr min-content min-content 1fr;
  grid-template-columns: 1fr minmax(auto, 53rem) 1fr;
}

.hero-img {
  grid-row: 2 / 3;
  grid-column: 2 / 3 ;
}

.hero-info {
  display: grid;
  grid-template-columns: min-content 1fr;
  column-gap: 1rem;
  grid-column: 2 / 3 ;
  grid-row: 4 / 5;
  overflow: hidden;
}


.hero-info-1{
  grid-row: 1 /2;
  grid-column: 1/2;
}

.hero-info-2{
  grid-row: 1 /2;
  grid-column: 2/3;
  align-self: center;
}

.hero-info-3{
  grid-row: 2 /3;
  grid-column: 1/-1;
}

.hero-desc{
  display: flex;
  gap: 3rem;
  padding-top: 2rem;
  grid-column: 2 / 3 ;
  grid-row: 5 / 6;
  height: 8rem;
}

.hero-price{
  color: var(--color-primary);
  flex: 0 0 auto;
  font-size: 3.9rem;
  font-weight: 700;
  font-family: 'Open Sans', Arial, sans-serif;
  
}

.hero-link{
  display: flex;
  flex: 0 1 17.8rem;
  align-items: center;
  justify-content: center;
}




  @media screen and (min-width: 576px) {
    .nav-center{
      /* display: grid;
      grid-template-columns: 1fr 15rem 55rem 1fr; */
    } 
     .nav-header{
      /* grid-column: 2 / 3; */
    }
    .nav-links{
      /* display: flex;
      align-items: center;
      justify-content: start;
      gap: 3rem;
      grid-column: 3 / 4; */
    } 
    .hero-center{
      /* grid-template-columns: 1fr 50rem 1fr;
      grid-template-rows: 70rem 15rem; */
    }
    .hero-info {
      /* grid-row: 2 / 3;
      grid-column: 2 / 3;
      display: grid;
      align-content: center; */
    }
    .hero-img {
      /* grid-row: 1 / 2;
      grid-column: 2 / 3;
      padding-top: 10rem; */
    }
}  




@media screen and (min-width: 768px) {

}




@media screen and (min-width:992px) {
  .nav-center{
    /* max-width: none;
    width: 100%;
    display: grid;
    grid-template-columns:  1fr 15rem 81rem  1fr; */
  } 
   .nav-header{
    /* grid-column: 2 / 3; */
  }
  .nav-links{
    /* display: flex;
    align-items: center;
    justify-content: start;
    gap: 3rem;
    grid-column: 3 / 4; */
  } 
  .hero-center{
    /* grid-template-columns: 1fr 48rem 48rem 1fr;
    grid-template-rows: calc(100vh - 50rem);
    align-content: center; */
  }
  .hero-info {
    /* grid-row: 1 / 1;
    grid-column: 2 / 3;
    display: grid;
    align-content: center;
    padding-bottom: 15rem; */
  }  
  .hero-img {
    /* grid-row: 1 / 1;
    grid-column: 3 / 4; */
  }
  .hero-img img{
    /* object-fit: cover;
    width: 100%;
    height: 100% */
  }
}







@media screen and (min-width: 1200px) {
   .section-center, .nav-center {
    /* max-width: none;
    width: 100%; */
  } 
  .section-center, .footer-center{
    /* width: 90vw;
    margin: 0 auto;
    max-width: 1170px;  */
  }
  .hero-center {
    /* grid-template-columns: 1fr 50rem 67rem  1fr;
    grid-template-rows: 1fr;
    margin-top: -12rem; */
  }
  .nav-center{
    /* grid-template-columns: 1fr 15rem  102rem 1fr; */
 
  }
  .nav-header{
    /* grid-column: 2 / 3; */
  }
  .nav-links{
    /* display: flex;
    align-items: center;
    justify-content: start;
    gap: 3rem;
    grid-column: 3 / 4; */
  }
  .hero-info {
    /* grid-row: 1 / 1;
    grid-column: 2 / 3;
    display: grid;
    align-content: center;
    padding-bottom: 25rem; */
  }
  .hero-img {
    /* grid-row: 1 / 1;
    grid-column: 3 / 4;
    margin-top: -12rem;
    margin-bottom: -3rem;
    margin-right: -11rem;
    padding-top: 0; */
  }
  .hero-img img{
    /* object-fit: cover;
    width: 100%;
    height: 100%; */
  }
}




/* PRODUCT-ONE */

.product-one {
  background-color: var(--even-section-color)
}

.product-one-center {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: 1fr min-content;
}

.product-one-img {
  grid-column: 1 / -1;
}

.product-one-text {
  grid-column: 1/-1;
}

@media screen and (min-width: 676px) {
  .product-one-center {
    grid-template-columns:  1fr 1fr;
    grid-template-rows: 1fr;
  }

  .product-one-img {
    grid-row: 1/1;
    grid-column: 1 / 2;
  }

  .product-one-text {
    grid-row: 1/1;
    grid-column: 2/3;
  }
}

/* PRODUCT-TWO */

.product-two {
  background-color: rgb(141, 141, 141);
}

.product-two-center {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 1fr min-content;
}

.product-two-img {
  grid-row: 1/2;
  grid-column: 1 / -1;
}

.product-two-text {
  grid-row: 2/3;
  grid-column: 1/-1;
}

@media screen and (min-width: 676px) {
  .product-two-center {
    grid-template-columns: 2fr 1fr;
  }
  .product-two-img {
    grid-row: 1/1;
    grid-column: 2 / 3;
  }

  .product-two-text {
    grid-row: 1/1;
    grid-column: 1/2;
  }
}

/* PRODUCT THREE */
.product-three {
  background-color: rgb(179, 176, 176);
}

.product-three-center {
  display: grid;
  width: 90vw;
  margin: 0 auto;
  grid-template-rows: 1fr min-content;
}

.product-three-img {
  grid-row: 1/2;
  grid-column: 1 / -1;
}

.product-three-text {
  grid-row: 2/3;
  grid-column: 1/-1;
}

@media screen and (min-width: 676px) {
  .product-three-center {
    width: 100%;
    margin: 0;
    /* grid-template-rows: 1fr; */
    grid-template-columns: 1fr 58.5rem 58.5rem 1fr
  }
  .product-three-img {
    grid-row: 1 / 1;
    grid-column: 1 / 3;
  }

  .product-three-text {
    grid-row: 1 / 1;
    grid-column: 3 / 4;
  }
}

/* FOOTER */

.footer {
  background-color: rgb(100, 100, 100);
}

.footer-center {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: repeat(4, min-content);
}

.prod-desc {
  grid-column: 1/-1;
  grid-row: 1/2;
}

.prod-price {
  grid-column: 1/-1;
  grid-row: 2/3;
  justify-self: center;
}

.prod-desc-table {
  grid-column: 1 / -1;
  grid-row: 3/4;
}

.footer-links {
  display: grid;
  justify-items: center;
  list-style-type: none;
  grid-template-columns: 1fr;
}

.footer-links div {
  padding-top: 2rem;
  padding-bottom: 1rem;
  border-bottom: 1px solid black;
}

@media screen and (min-width: 676px) {
  .footer-center {
    grid-template-rows: min-content 1fr;
    grid-template-columns: 1fr 1fr;
  }

  .prod-desc {
    grid-column: 1/2;
    grid-row: 1/2;
  }

  .prod-price {
    grid-column: 2/3;
    grid-row: 1/2;
    justify-self: flex-end;
  }

  .prod-desc-table {
    grid-column: 1 / -1;
    grid-row: 3/4;
  }

  .footer-links {
    grid-template-columns: repeat(3, minmax(min-content, 20rem));
    justify-items: left;
  }

  .footer-links div {
    padding: 0;
    border-bottom: 0;
  }

  .footer-links div:not(:first-child) {
    padding-left: 2rem;
    border-left: 1px solid black;
  }
}

